<resources>
    <string name="app_name">A Quiet Place</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_map">Map</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="title_reset_password">Reset Password</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="user_settings">User Settings</string>
    <string name="customisation">Customisation</string>
    <string name="profile">Profile</string>
    <string name="accessibilty">Accessibilty</string>
    <string name="notifications">Notifications</string>
    <string name="reset_password">Reset Password</string>
    <string name="details">Details</string>
    <string name="user_profile">User Profile</string>
    <string name="upload">Upload</string>
    <string name="favourites_list">Favourites List</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="click_here_to_register">Click Here to Register</string>
    <string name="no_user">No User</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="click_here_to_login">Click Here to Login</string>
    <string name="x">X</string>
    <string name="name">Name</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="comfort_rating">Comfort Rating</string>
    <string name="quietness_rating">Quietness Rating</string>
    <string name="spaciousness_rating">Spaciousness Rating</string>
    <string name="charging_spots">Charging Spots</string>
    <string name="touch_here_to_register">Touch Here to Register</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="to_be_implemented">TO BE IMPLEMENTED</string>
    <string name="light_mode">Light Mode</string>
</resources>