<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/map_marker"
        android:title="@string/title_dashboard" />

<!--    <item-->
<!--        android:id="@+id/navigation_favourites"-->
<!--        android:icon="@drawable/star_outline"-->
<!--        android:title="@string/title_favourites" />-->

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/account"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/menu"
        android:title="@string/title_settings" />

</menu>