<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/point_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:paddingBottom="10dp"
        android:background="@color/common_google_signin_btn_text_light_default" />

    <TextView
        android:id="@+id/opening_hours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/comfort_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/quietness_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/spaciousness_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/charging_spots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/name"
        android:inputType="text"
        android:visibility="gone" />

    <EditText
        android:id="@+id/edit_opening_hours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/opening_hours"
        android:inputType="text"
        android:visibility="gone" />

    <EditText
        android:id="@+id/edit_comfort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/comfort_rating"
        android:inputType="number"
        android:visibility="gone" />

    <EditText
        android:id="@+id/edit_quietness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/quietness_rating"
        android:inputType="number"
        android:visibility="gone" />

    <EditText
        android:id="@+id/edit_spaciousness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/spaciousness_rating"
        android:inputType="number"
        android:visibility="gone" />

    <Switch
        android:id="@+id/edit_charging_spots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charging_spots"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        android:visibility="gone" />

</LinearLayout>