<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="95dp"
            android:text="@string/user_profile"
            android:textSize="35sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/pfp"
                android:layout_width="250dp"
                android:layout_height="249dp"
                android:background="@color/common_google_signin_btn_text_light_default"
                android:src="@drawable/baseline_person_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:shapeAppearanceOverlay="@style/circle" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/change_pfp_btn"
                android:layout_width="348dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:clickable="true"
                android:contentDescription="@string/upload"
                android:src="@drawable/baseline_camera_alt_24"
                app:layout_constraintBottom_toBottomOf="@+id/pfp"
                app:layout_constraintEnd_toEndOf="@+id/pfp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/user_profile_details"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/details"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/reset_pwd_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/reset_password"
                app:layout_constraintTop_toBottomOf="@+id/user_profile_details"
                app:layout_constraintEnd_toEndOf="@+id/user_profile_details"
                app:layout_constraintStart_toStartOf="@+id/user_profile_details" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ListView
            android:id="@+id/contributions_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </LinearLayout>

</FrameLayout>